styles/likely.styl
.likely,
.likely__widget {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  margin: 0;
  padding: 0;
  word-spacing: 0 !important;
  text-indent: 0 !important;
  list-style: none !important;
  font-weight: normal;
  font-family: "Helvetica Neue", Arial, sans-serif;
  font-size: inherit;
}

// Hide buttons until they are loaded
.likely {
  opacity: 0;
}
.likely_visible {
  opacity: 1;
  transition: opacity .1s ease-in;
}
.likely > * {
  display: inline-block;
  visibility: hidden;
}
.likely_visible > * {
  visibility: inherit;
}

.likely {
  // outline: 1px #f00 solid;
  &__widget {
    display: inline-block;
    position: relative;
    white-space: nowrap;
  }

  &__button,
  &__counter {
    text-decoration: none;
    text-rendering: optimizeLegibility;
    display: inline-block;
    margin: 0;
    outline: 0;
  }

  &__button {
    position: relative;
    cursor: pointer;
    user-select: none;
  }

  &__counter {
    display: none;
    position: relative;
    font-weight: normal;
  }

  &_ready &__counter {
    display: inline-block;
  }

  &_ready &__counter_empty {
    display: none;
  }
    
  &__widget,
  &__icon,
  &__button,
  &__counter {
    vertical-align: top;
  }

  &__widget {
  
    transition: background .33s ease-out, color .33s ease-out, fill .33s ease-out;
    line-height: inherit;
  
    &:hover, &:active, &:focus {
      transition: none;
      cursor: pointer;
    }
    
  }

  &__icon {
    position: relative;
    text-align: left;
    display: inline-block;
  }

  svg {
    position: absolute;
  }

  &__button,
  &__counter {
    line-height: inherit;
    cursor: inherit;
  }

  &__button:empty {
    display: none;
  }

  &__counter {
    text-align: center;
  }

}

/* Style options */

.likely {
  .likely__widget {
    color: #000;
    background: rgba(236,236,236,1);
    background: rgba(231,231,231,.8);
  } 
  .likely__counter {
    background-size: 1px 1px;
    background-repeat: repeat-y;           
    background-image: linear-gradient(to right, rgba(0,0,0,.2) 0, rgba(0,0,0,0) .5px, rgba(0,0,0,0) 100%)
  }
}
.likely-light {
  .likely__widget {
    color: #fff;
    fill: #fff;
    background: rgba(236,236,236,.16);
    text-shadow: rgba(0,0,0,.2) 0 0 .33em;
  }
  .likely__counter {
    background-image: linear-gradient(to right, rgba(255,255,255,.4) 0, rgba(255,255,255,0) .5px, rgba(255,255,255,0) 100%)
  }
}

colorize(button, color) {
  .likely__widget_{button} {
    fill: color;
    &:hover, &:active, &:focus {
      background: alpha(mix(#fff,color,75%),.8);
    }
  }
  .likely-light {
    .likely__widget_{button} {
      &:hover, &:active, &:focus {
        text-shadow: color 0 0 .25em;
        background: alpha(color,0.7);
      }
    }
  }
}

colorize('facebook',      rgb(66,84,151)); // #425497
colorize('twitter',       rgb(0,183,236)); // #00b7ec
colorize('gplus',         rgb(221,66,65)); // #dd4241
colorize('vkontakte',     rgb(82,110,143)); // #526e8f);
colorize('pinterest',     rgb(204,0,43)) // #cc002b
colorize('odnoklassniki', #f6903b);
// colorize('mailru', #255896, #ffcd00);



/* Size options */

.likely {
  font-size: 14px;
  line-height: 20px;
  margin-bottom: -14px;
  .likely__widget {
    border-radius: 3px;
    height: 22px;
    margin: 0 7px 14px;
  } 
  .likely__icon {
    width: 22px; height: 22px;
  }
  .likely__button {
    padding: 1px 4px 1px 0;
  }
  .likely__counter {
    padding: 1px 4px;
  }
  svg {
    left: 3px;
    top: 3px;
    width: 16px;
    height: 16px;
  }
}

.likely-big {
  font-size: 18px;
  line-height: 28px;
  margin-bottom: -18px;
  .likely__widget {
    border-radius: 4px;
    height: 32px;
    margin: 0 9px 18px;
  } 
  .likely__icon {
    width: 32px; height: 32px;
  }
  .likely__button {
    padding: 2px 6px 2px 0;
  }
  .likely__counter {
    padding: 2px 6px;
  }
  svg {
    left: 4px;
    top: 4px;
    width: 24px;
    height: 24px;
  }
}

.likely-small {
  font-size: 12px;
  line-height: 14px;
  margin-bottom: -12px;
  .likely__widget {
    border-radius: 2px;
    height: 18px;
    margin: 0 6px 12px;
  } 
  .likely__icon {
    width: 18px; height: 18px;
  }
  .likely__button {
    padding: 2px 3px 2px 0;
  }
  .likely__counter {
    padding: 2px 3px;
  }
  svg {
    left: 3px;
    top: 3px;
    width: 12px;
    height: 12px;
  }
}

  .likely__widget:first-child {
    margin-left: 0;
  }
  .likely__widget:last-child {
    margin-right: 0;
  }

